Added extra examples and improved readme.